--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					</div>	
 					<div class="address">
 						<img src="images/phone.png">
-						<address>+91 8086800203</address>
+						<address>+91 79944 51181</address>
 					</div>
 				</div>
 				<div>
